--- a/example/index.html
+++ b/example/index.html
@@ -3,7 +3,7 @@
   
   <head>
     <meta charset="utf-8"/>
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Openedu Server Example</title>
 
     <style>
       body {
